MonetDB/src/mal/Tests/tst730.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## functions and rules with variable arguments complicate our live
#
#function pr(format:str,arg:any[]):void;
#	i:= -1;
#barrier  b:= iterator.argument(i,arg);
#end b;
#end function; 
function Admin.pr(format:str,arg:any, malVARG:any):void;	#0:void (pr:void)(format:str)(arg:any)( malVARG:any)
	i := -1;	#1:int (i:int)($5:int)
barrier	b := iterator.argument(i,arg);	#2 unknown:void (b:any)(i:int)(arg:any)
end	b;	#3:void (b:any)
end function;	#4:void 
#
## how to iterator through a variable list
#function prStr(format:str,arg:str[]):void;
#	i:= -1;
#	limit:= Array.getLength(arg);
#barrier  b:= nextElement(i,0,limit);	#elm:= arg[i]
#	elm:= Array.get(arg,i);  #elm:= arg[i]
#	printf("argument ");
#	printf(i);
#	printf(elm);
#end b;
#end function; 
function Admin.prStr(format:str,arg:str, malVARG:any):void;	#0:void (prStr:void)(format:str)(arg:str)( malVARG:any)
	i := -1;	#1:int (i:int)($5:int)
	limit := Array.getLength(arg);	#2 unknown:void (limit:any)(arg:str)
barrier	b := nextElement(i,0,limit);	#3 unknown:void (b:any)(i:int)($8:int)(limit:any)
	elm := Array.get(arg,i);	#4 unknown:void (elm:any)(arg:str)(i:int)
	system.printf("argument ");	#5:int ($10:int)($11:str)
	printf(i);	#6 unknown:void ($12:any)(i:int)
	printf(elm);	#7 unknown:void ($13:any)(elm:any)
end	b;	#8:void (b:any)
end function;	#9:void 
#
#pr("hello",1,true);
#prStr("hello",1,true);
#prStr("hello","quick","brown","fox");
#
function Admin.main():int;	#0:void (main:int)
	Admin.pr("hello",1,true);	#1:int ($1:int)($2:str)($3:int)($4:bit)
	prStr("hello",1,true);	#2 unknown:void ($5:any)($2:str)($3:int)($4:bit)
	Admin.prStr("hello","quick","brown","fox");	#3:oid ($6:void)($2:str)($7:str)($8:str)($9:str)
end function;	#4:void 
!ERROR: MALexception:Admin.main[2]:Instruction type not fixed
>